--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
     "suggest": {
         "ext-swoole": "Event-driven asynchronous & concurrent & coroutine networking engine with high performance for PHP."
     },
+    "autoload": {
+        "psr-4": {
+            "LaravelQueue\\Nsq\\": "src/"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
